Remove env sub curly brackets

--- a/bazarr/compose.yaml
+++ b/bazarr/compose.yaml
@@ -6,7 +6,7 @@
 ########################################################
 services:
   bazarr:
-    container_name: ${NAME}
+    container_name: $NAME
     image: linuxserver/bazarr:latest
     restart: unless-stopped
     networks:
@@ -23,12 +23,12 @@ services:
       - TZ=Europe/London
     labels:
       - traefik.enable=true
-      - traefik.http.routers.${NAME}.rule=Host(`${URL}`)
-      - traefik.http.routers.${NAME}.middlewares=${NAME}
-      - traefik.http.middlewares.${NAME}.basicAuth.usersfile=/auth/.${NAME}passwd
+      - traefik.http.routers.$NAME.rule=Host(`$URL`)
+      - traefik.http.routers.$NAME.middlewares=$NAME
+      - traefik.http.middlewares.$NAME.basicAuth.usersfile=/auth/.$NAMEpasswd
 networks:
   traefik:
     external: true
 x-dockge:
   urls:
-    - https://${URL}
+    - https://$URL
