--- a/gotify/compose.yaml
+++ b/gotify/compose.yaml
@@ -3,7 +3,7 @@
 ########################################################
 services:
   gotify:
-    container_name: ${NAME}
+    container_name: $NAME
     image: gotify/server:latest
     restart: unless-stopped
     networks:
@@ -16,10 +16,10 @@ services:
       - TZ=Europe/London
     labels:
       - traefik.enable=true
-      - traefik.http.routers.${NAME}.rule=Host(`${URL}`)
+      - traefik.http.routers.$NAME.rule=Host(`$URL`)
 networks:
   traefik:
     external: true
 x-dockge:
   urls:
-    - https://${URL}
+    - https://$URL
