--- a/stirling/compose.yaml
+++ b/stirling/compose.yaml
@@ -1,6 +1,6 @@
 services:
   stirling:
-    container_name: ${NAME}
+    container_name: $NAME
     image: frooodle/s-pdf:latest
     restart: unless-stopped
     networks:
@@ -14,11 +14,11 @@ services:
       - SECURITY_ENABLE_LOGIN=true
     labels:
       - traefik.enable=false
-      - traefik.http.routers.${NAME}.rule=Host(`${URL}`)
-      - traefik.http.routers.${NAME}.middlewares=${NAME}
+      - traefik.http.routers.$NAME.rule=Host(`$URL`)
+      - traefik.http.routers.$NAME.middlewares=$NAME
 networks:
   traefik:
     external: true
 x-dockge:
   urls:
-    - https://${URL}
+    - https://$URL
