--- a/whoami/compose.yaml
+++ b/whoami/compose.yaml
@@ -1,16 +1,16 @@
 services:
   whoami:
-    container_name: ${NAME}
+    container_name: $NAME
     image: containous/whoami
     networks:
       - traefik
     labels:
       - traefik.enable=true
-      - traefik.http.routers.${NAME}.rule=Host(`${URL}`)
-      - traefik.http.routers.${NAME}.middlewares=oauth
+      - traefik.http.routers.$NAME.rule=Host(`$URL`)
+      - traefik.http.routers.$NAME.middlewares=oauth
 networks:
   traefik:
     external: true
 x-dockge:
   urls:
-    - https://${URL}
+    - https://$URL
