--- a/freecad/compose.yaml
+++ b/freecad/compose.yaml
@@ -1,6 +1,6 @@
 services:
   freecad:
-    container_name: ${NAME}
+    container_name: $NAME
     image: lscr.io/linuxserver/freecad:latest
     restart: unless-stopped
     networks:
@@ -17,7 +17,7 @@ services:
       - traefik.enable=true
       - traefik.http.routers.$NAME.rule=Host(`$URL`)
       - traefik.http.routers.$NAME.middlewares=$NAME
-      - traefik.http.middlewares.$NAME.basicAuth.usersfile=/auth/.${NAME}passwd
+      - traefik.http.middlewares.$NAME.basicAuth.usersfile=/auth/.$NAMEpasswd
 networks:
   traefik:
     external: true
