Use env list over env maps

--- a/beszel/compose.yaml
+++ b/beszel/compose.yaml
@@ -28,7 +28,7 @@ services:
       # - KEY
       - .env.secrets
     environment:
-      PORT: 45876
+      - PORT=45876
 networks:
   traefik:
     external: true
