--- a/postgres/compose.yaml
+++ b/postgres/compose.yaml
@@ -1,6 +1,6 @@
 services:
   postgres:
-    container_name: postgres
+    container_name: $NAME
     image: postgres:16
     restart: unless-stopped
     networks:
