--- a/webdav/compose.rclone.yaml
+++ b/webdav/compose.rclone.yaml
@@ -6,7 +6,7 @@
 ########################################################
 services:
   webdav:
-    container_name: ${NAME}
+    container_name: $NAME
     image: rclone/rclone:latest
     restart: unless-stopped
     networks:
@@ -20,9 +20,9 @@ services:
       - TZ=Europe/London
     labels:
       - traefik.enable=true
-      - traefik.http.routers.${NAME}.rule=Host(`${URL}`)
-      - traefik.http.routers.${NAME}.middlewares=${NAME}
-      - traefik.http.middlewares.${NAME}.basicAuth.usersfile=/auth/.${NAME}passwd
+      - traefik.http.routers.$NAME.rule=Host(`$URL`)
+      - traefik.http.routers.$NAME.middlewares=$NAME
+      - traefik.http.middlewares.$NAME.basicAuth.usersfile=/auth/.$NAMEpasswd
     command: |
       serve webdav /files
         -v
@@ -31,6 +31,3 @@ services:
 networks:
   traefik:
     external: true
-x-dockge:
-  urls:
-    - https://${URL}
