--- a/meilisearch/compose.yaml
+++ b/meilisearch/compose.yaml
@@ -1,6 +1,6 @@
 services:
   meilisearch:
-    container_name: meilisearch
+    container_name: $NAME
     image: getmeili/meilisearch:v1.9
     restart: unless-stopped
     networks:
