--- a/webdav/compose.rclone.yaml
+++ b/webdav/compose.rclone.yaml
@@ -22,7 +22,7 @@ services:
       - traefik.enable=true
       - traefik.http.routers.$NAME.rule=Host(`$URL`)
       - traefik.http.routers.$NAME.middlewares=$NAME
-      - traefik.http.middlewares.$NAME.basicAuth.usersfile=/auth/.$NAMEpasswd
+      - traefik.http.middlewares.$NAME.basicAuth.usersfile=/auth/.${NAME}passwd
     command: |
       serve webdav /files
         -v
