--- a/transmission/compose.yaml
+++ b/transmission/compose.yaml
@@ -39,7 +39,7 @@ services:
       - traefik.http.routers.$NAME.rule=Host(`$URL`)
       - traefik.http.routers.$NAME.middlewares=$NAME
       - traefik.http.routers.$NAME.service=$NAME
-      - traefik.http.middlewares.$NAME.basicAuth.usersfile=/auth/.$NAMEpasswd
+      - traefik.http.middlewares.$NAME.basicAuth.usersfile=/auth/.${NAME}passwd
       - traefik.http.services.$NAME.loadbalancer.server.port=9091
     secrets:
       - openvpn_creds
