--- a/webdav/compose.yaml
+++ b/webdav/compose.yaml
@@ -21,7 +21,7 @@ services:
       - traefik.enable=true
       - traefik.http.routers.$NAME.rule=Host(`$URL`)
       - traefik.http.routers.$NAME.middlewares=$NAME
-      - traefik.http.middlewares.$NAME.basicAuth.usersfile=/auth/.$NAMEpasswd
+      - traefik.http.middlewares.$NAME.basicAuth.usersfile=/auth/.${NAME}passwd
     entrypoint:
       - bash
     command: |
